# eto-mcp

./: .dockerignore  .gitignore  CHANGELOG.md  Dockerfile  Dockerfile.bridge  README.md  claude-mcp-config.md  cliff.toml  fly.staging.toml  fly.toml  fly.toml.bridge  package-lock.json  package.json  pnpm-lock.yaml  test-qa.ts  tsconfig.build.issuers.json  tsconfig.build.json  tsconfig.build.services.json  tsconfig.issuers.json  tsconfig.json  vitest.config.ts
.changeset/: FN-016-bijective-svm-to-evm.md  FN-064-memo.md  FN-065-transfer-memo-wiring.md  FN-066-config-dedup-audit.md  FN-067-idempotency-key.md  FN-072-batch-transfer-native.md  FN-102-required-cents.md  fn-020-claim-commitments-examples.md  fn-058-skill-cert-caller-binding.md  fn-063-bank-claim-commitments.md  fn-077-claim-commitments.md  fn-082-poseidon-swap.md  fn-200-claim-commitments.md
docs/: agent-identity-model.md  authority-inheritance.md  cast_call-vs-read_contract.md  fly-deploy.md  memo-ingester.md  memo-schema-registry.md  model-attestation.md  schema-registry.md  sdk-api-spec.md  sdk-py-mcp-audit.md  sdk-py-skeleton-spec.md  singularity-record-registry.md
keeper/: README.md  agents.json  arb-agents.json  defi-arb-agents.json  prison-yard.json  start.ts
mesh/: start.sh  validator.ts
public/: llms.txt  login.html
scripts/: check-env.sh  fn-200-build-commitments.mjs  fn-200-emit-schemas.mjs  qa-remote.sh
signing-service/: Cargo.toml
signing-service/src/: frost.rs  keystore.rs  main.rs  service.rs
src/: bridge-server.ts  config.ts  index.ts  login.tsx  server.ts  sse-server.ts
(+429 files in other folders)
